--- a/feline/templates/jobposts/jobpost_list.html
+++ b/feline/templates/jobposts/jobpost_list.html
@@ -14,19 +14,21 @@
         </div>
     </div>
 </div>
-{% if keyword and category %}
-    <div class="mx-4 sm:mx-auto sm:container">
-        <p class="my-4 font-bold">Resultados para termino: "{{ keyword }}" Categoria: "{{ category }}"</p>
-    </div>
-{% elif keyword %}
-    <div class="mx-4 sm:mx-auto sm:container">
-        <p class="my-4 font-bold">Resultados para termino: "{{ keyword }}"</p>
-    </div>
-{% endif %}
+
 
 <div class="lg:flex lg:container lg:mx-auto">
 
     <div class="companies-list mx-4 mt-6 lg:mx-auto lg:w-2/3">
+        {% if keyword and category %}
+            <div class="mx-4 sm:mx-auto sm:container">
+                <p class="my-4 font-bold">Resultados para termino: "{{ keyword }}" Categoria: "{{ category }}"</p>
+            </div>
+        {% elif keyword %}
+            <div class="mx-4 sm:mx-auto sm:container">
+                <p class="my-4 font-bold">Resultados para termino: "{{ keyword }}"</p>
+            </div>
+        {% endif %}
+        
         {% for jobpost in object_list %}
         <div class="w-full py-8 px-6 bg-white rounded mb-4 sm:container sm:mx-auto" data-company-url="{{ company.get_absolute_url }}">
             <div class="sm:flex sm:clear-both">
@@ -77,7 +79,7 @@
 
 
         {% empty %}
-            <div class="mx-4 sm:mx-auto sm:container">
+            <div class="py-8 mx-4 sm:mx-auto sm:container">
                 <p class="text-center">No tenemos trabajos con ese estos criterios</p>
             </div>
             
